[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raindinners"
description = "Library for Like microservices"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "api",
    "asyncio",
    "aiohttp",
]
dependencies = [
    "aiohttp~=3.8.5",
    "pydantic>=2.1.1,<3",
    "aiofiles>=23.1,<23.3",
]
dynamic = ["version"]

[tool.hatch.version]
path = "raindinners/__meta__.py"

[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
ignore = [
    "E501",
]
exclude = [
    ".git",
    ".venv",
]
force-exclude = true

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
    \.venv
  | logs
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
disable_error_code = [
    "import",
]
show_error_codes = true
show_error_context = true
namespace_packages = true
